addign create schema for wishlist route
